# pyflygame

./: .gitignore  LICENSE  README.md  pyproject.toml
nmfly/: __init__.py  bridge.py  cli.py  dockable.py  fly_model.py  flygame.py  flygym_bridge.py  flygym_wasd.py  gait.py  launcher.py  proprioception.py  types.py
nmfly/adapters/: __init__.py  fwmc.py
tests/: test_nmfly.py
